# SciCanvas

./: .validation-universal-assistant-controls  AGPL-3.0-only  LICENSE  OFFICE_BRIDGE_VALIDATION.md  OFFICE_ENABLE_VALIDATION.md  PASSIVE_TOUR_VALIDATION.md  README.md  STABILITY_VALIDATION.md  VALIDATE_REFRESH_SAFE_BUILD.md  VALIDATION_NAVIGATION_WATER_FINAL.md  VALIDATION_PRODUCT_EXPERIENCE.md  VALIDATION_PRODUCT_EXPERIENCE_V2.md  account-header-polish.js  account-inspector-fit-polish.js  adriana-polish.js  advanced-tools.js  ai-chat-fixes.js  ai-chat.js  app-bootstrap.js  arrange-layout-template-tools.js  assistant-10k.js  browserconfig.xml  cloud-account.js  cloud-config.js  code-pro-tools-workspace.js  code-window-startup-render.js  code-window-tools.js  collaboration-always-on.js  collaboration-guest-links.js  collaboration-live-motion.js  collaboration-manual-gate.js  collaboration-realtime-delivery-fix.js  collaboration-status-fix.js  critical-flow-fixes.js  dark-mode-windows.js  data-grid-unlimited.js  data-inline-feedback.js  data-science-tools.js  data-workspace-plus.js  design-tools.js  (+136 more)
figureloom-bio/: .installer-build-trigger  .release-diagnostic-trigger  README.md  pyproject.toml
figureloom-bio/examples/: clean-fastq.flbio  clean-samples.flbio  example-reads.fastq  example-sequences.fasta  fasta-cleanup.flbio  microbiology-bacterial-genome.flbio  prepare-fasta.flbio  prepare-table.flbio  samples.csv
figureloom-bio/figureloom_bio/: __init__.py  analysis_language.py  capabilities.py  cli.py  complete_language.py  complete_language_parity.py  control_flow.py  (+31 more)
(+246 files in other folders)
